# humanoid_getup

./: .gitignore  .writeup_print.css  README.md  WRITEUP.md  modal_dispatch.py  mpc_reference.npz  pyproject.toml
configs/: env.yaml  mpc.yaml  train.yaml
src/controls_playground/: __init__.py  config.py  env.py  motor_dr.py  policy.py
src/controls_playground/scripts/: analysis.py  cost_eval.py  eval_reward.py  hybrid.py  landscape.py  lqr.py  motor_dr_eval.py  motor_dr_plot.py  mpc.py  probe.py  random_init.py  random_init_viz.py  settle.py  train.py  train_dr.py  viz.py
tests/: test_smoke.py
